[package]
name = "yks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
bevy = {version = "0.8.1", features = ["dynamic"]}
bevy-inspector-egui = "0.13.0"
polars = {version="0.24.0", features=["lazy", "describe"]}
bevy_flycam  = { version = "0.8.1"}

